Corrected the spacing and merged

--- a/visu-donnees-train/src/App.css
+++ b/visu-donnees-train/src/App.css
@@ -6,7 +6,9 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+body {
+  overflow-x: hidden;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -70,16 +72,4 @@ body {
 
 .map, .chart {
   width: 45%;
-}
-
-.image-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  gap: 20px;
-}
-
-.image-container img {
-  width: 200px; /* Ajustez si nécessaire */
-  height: auto;
 }
